deploy/kustomize/apps/ui/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-ingress
  namespace: default
  # annotations:
  #   # nginx.ingress.kubernetes.io/rewrite-target: /
  #   # nginx.ingress.kubernetes.io/proxy-body-size: 8m
  #   # nginx.ingress.kubernetes.io/proxy-buffering: "on"
  #   # nginx.ingress.kubernetes.io/configuration-snippet: |
  #   #   proxy_cache static-cache;
  #   #   proxy_cache_valid any 60m;
  #   #   add_header X-Cache-Status $upstream_cache_status;
  # # kubernetes.io/ingress.class: nginx
  # # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  # # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: ui.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui-svc
                port:
                  name: http-ui
